--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "framer-motion": "^12.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
