--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "homepage": "https://alekistar.github.io/my-portfolio",
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,7 +24,9 @@
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
     "vite": "^6.3.6",
     "vitest": "^3.0.7"
