--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "homepage": "https://alekistar.github.io/my-portfolio",
   "dependencies": {
+    "@datadog/browser-logs": "^6.26.0",
+    "@datadog/browser-rum": "^6.26.0",
     "@formspree/react": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
